<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cvMascotas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="?android:attr/colorBackground"
    card_view:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imgMascota"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/fotoperro"
            android:src="@drawable/fotoperro_jruss">

        </ImageView>

        <TextView
            android:id="@+id/tvNombreMascotaCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pnombre"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnLikeHueso"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/icons8_dog_bone_48"
                android:contentDescription="@string/btnHueso">

            </ImageButton>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="100dp"
                android:contentDescription="@string/imagenhueso"
                android:src="@drawable/icons8_hueso_del_perro">

            </ImageView>

            <TextView
                android:id="@+id/tvNLikesCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/pNLikes"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>